updated the login page and the index page .

--- a/index.html
+++ b/index.html
@@ -3328,7 +3328,7 @@
       <button class="btn-ghost">How It Works</button>
     </div>
   </div>
-  <div class="promo-right">
+  <!-- <div class="promo-right">
     <div class="stat-pill">
       <div class="stat-icon green">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -3336,7 +3336,7 @@
           <polyline points="17 6 23 6 23 12"/>
         </svg>
       </div>
-      <div>
+      <div> -->
         <!-- <div class="stat-val">$2.4M+</div>
         <div class="stat-lbl">Saved by our users this month</div> -->
       </div>
