--- a/login.html
+++ b/login.html
@@ -92,7 +92,10 @@
       min-height: 100vh;
       padding-top: 56px;
     }
-
+  /* Ensure panels occupy their grid columns and stay the same height.
+       Place brand panel on the right and auth panel on the left. */
+    .brand-panel { grid-column: 1; height: 100%; }
+    .auth-panel  { grid-column: 2; height: 100%; }
     /* 
        LEFT  Brand Panel
      */
@@ -526,7 +529,9 @@
         </ul>
       </div>
 
-      <div class="brand-stats">
+      <!-- NEW CHANGE -->
+       
+      <!-- <div class="brand-stats">
         <div class="bstat">
           <span class="bstat-val">240K+</span>
           <span class="bstat-lbl">Active users</span>
@@ -539,7 +544,7 @@
           <span class="bstat-val">45+</span>
           <span class="bstat-lbl">Retailers tracked</span>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- RIGHT -->
