--- a/index.html
+++ b/index.html
@@ -3339,18 +3339,18 @@
       <div> -->
         <!-- <div class="stat-val">$2.4M+</div>
         <div class="stat-lbl">Saved by our users this month</div> -->
-      </div>
-    </div>
-    <div class="stat-pill">
+      <!-- </div>
+    </div> -->
+    <!-- <div class="stat-pill">
       <div class="stat-icon red">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="10"/><path d="m4.93 4.93 14.14 14.14"/>
         </svg>
       </div>
-      <div>
+      <div> -->
         <!-- <div class="stat-val">1.8M</div>
         <div class="stat-lbl">Fake reviews detected &amp; flagged</div> -->
-      </div>
+      <!-- </div>
     </div>
     <div class="stat-pill">
       <div class="stat-icon cyan">
@@ -3358,12 +3358,12 @@
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/>
         </svg>
       </div>
-      <div>
+      <div> -->
         <!-- <div class="stat-val">45+</div>
         <div class="stat-lbl">Retailers analyzed in real-time</div> -->
-      </div>
+      <!-- </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <!--  FOOTER  -->
