removed "HOW IT WORKS" and "TRY IT FOR FREE" .

--- a/index.html
+++ b/index.html
@@ -3311,10 +3311,10 @@
       EazZy Shop's AI scans thousands of data points in seconds 
       price history, real vs. fake reviews, and the perfect moment to buy.
     </p>
-    <div class="promo-btns">
+    <!-- <div class="promo-btns">
       <button class="btn-primary">Try It Free</button>
       <button class="btn-ghost">How It Works</button>
-    </div>
+    </div> -->
   </div>
   <div class="promo-right">
     <div class="promo-logo-frame">
